# z2-arm-opencv

./: .bashrc  CMakeLists.txt  CMakeLists.txt.backup  Config.h.in  README.md  build.sh  configure.sh  install.sh  run  run-all.sh  run.sh  setup.sh
lib/opencv-4/: opencv.pc
lib/opencv-4/include/opencv4/opencv2/: cvconfig.h
lib/opencv-4/lib/: libopencv_aruco.so.4.1.0  libopencv_bgsegm.so.4.1.0  libopencv_bioinspired.so.4.1.0  libopencv_calib3d.so.4.1.0  libopencv_ccalib.so.4.1.0  libopencv_core.so.4.1.0  libopencv_datasets.so.4.1.0  libopencv_dnn.so.4.1.0  libopencv_dnn_objdetect.so.4.1.0  libopencv_dpm.so.4.1.0  libopencv_face.so.4.1.0  libopencv_features2d.so.4.1.0  libopencv_flann.so.4.1.0  libopencv_freetype.so.4.1.0  libopencv_fuzzy.so.4.1.0  libopencv_gapi.so.4.1.0  libopencv_hfs.so.4.1.0  libopencv_highgui.so.4.1.0  libopencv_img_hash.so.4.1.0  libopencv_imgcodecs.so.4.1.0  libopencv_imgproc.so.4.1.0  libopencv_line_descriptor.so.4.1.0  libopencv_ml.so.4.1.0  libopencv_objdetect.so.4.1.0  libopencv_optflow.so.4.1.0  libopencv_phase_unwrapping.so.4.1.0  libopencv_photo.so.4.1.0  libopencv_plot.so.4.1.0  libopencv_quality.so.4.1.0  libopencv_reg.so.4.1.0  libopencv_rgbd.so.4.1.0  libopencv_saliency.so.4.1.0  libopencv_shape.so.4.1.0  libopencv_stereo.so.4.1.0  libopencv_stitching.so.4.1.0  libopencv_structured_light.so.4.1.0  libopencv_superres.so.4.1.0  libopencv_surface_matching.so.4.1.0  libopencv_text.so.4.1.0  libopencv_tracking.so.4.1.0  (+7 more)
lib/opencv-4/lib/cmake/opencv4/: OpenCVModules-release.cmake
scripts/: build.sh  configure.sh  run-all.sh  run.sh
src/: opencv-test.cpp
